--- a/sass/_first-navbar.scss
+++ b/sass/_first-navbar.scss
@@ -1,6 +1,6 @@
 .first-nav {
   &__container {
-    background-color: #0a19a1;
+    background-color: $color-primary-dark;
     display: grid;
     grid-column: full-start / full-end;
   }
@@ -23,7 +23,7 @@
     /* get rid of default link styles */
     text-decoration: none;
     font-size: 1.6rem;
-    color: #f9f7f6;
+    color: $color-grey-1;
     /* when an element is inline-block it still behaves like an inline element, but 
     in this case we are able to define the width for it */
     display: inline-block;
@@ -55,34 +55,42 @@
   }
   &__input {
     grid-row: 1 /2;
+    width: 0%;
+    padding: 0;
     grid-column: 6 / 9;
-    /* top and botton 0.3rem, left and right 0.4rem */
-    padding: 0.3rem 0.4rem;
     font-size: 1.3rem;
     /* getting rid of the border around the search bar */
     border: none;
     /* change the background-color of inside of the search section to dark blue,
       in line with the rest of the first nav */
-    background-color: #0a19a1;
+    background-color: $color-primary-dark;
     /* change bottom border of search bar to white */
-    border-bottom: 0.1rem solid #f9f7f6;
+    border-bottom: 0.1rem solid $color-grey-1;
     outline: none;
     font-family: 'Nunito', sans-serif;
     /* change the color of text I'm inputing into the search bar */
-    color: #f9f7f6;
-    /* change color of the placeholder Search message in the search bar */
+    color: $color-grey-1;
+    transition: width 1s ease, padding 1s ease;
+    &.active {
+      /* top and botton 0.3rem, left and right 0.4rem */
+      padding: 0.3rem 0.4rem;
+      width: 100%;
+    }
   }
+  /* change color of the placeholder Search message in the search bar */
   &__input::placeholder {
-    color: #f9f7f6;
+    color: $color-grey-1;
   }
   &__btn {
     grid-row: 1 / 2;
     grid-column: 8 / 9;
-    border: none;
+    border: 0.1rem solid $color-grey-1;
     /* get rid of grey background box around the question mark */
-    background-color: transparent;
+    background-color: $color-secondary;
+    transform: translateY(-0.5vh);
+    padding: 1rem;
     /* change the color of the question mark */
-    color: #f9f7f6;
+    color: $color-grey-1;
     cursor: pointer;
   }
 }
